--- a/requirements.txt
+++ b/requirements.txt
@@ -1,113 +1,74 @@
-altair==5.2.0
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1694046349000/work
-attrs==23.1.0
-backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
-backports.functools-lru-cache @ file:///home/conda/feedstock_root/build_artifacts/backports.functools_lru_cache_1687772187254/work
-blinker==1.7.0
-Bottleneck @ file:///C:/ci_311/bottleneck_1676500016583/work
-cachetools==5.3.2
-catboost==1.2.2
-certifi==2023.11.17
-cffi @ file:///C:/ci_311/cffi_1676423759166/work
-charset-normalizer==3.3.2
-click @ file:///C:/ci_311/click_1676433091657/work
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1691044910542/work
-contourpy @ file:///C:/ci_311/contourpy_1676431756017/work
-ctgan @ file:///home/conda/feedstock_root/build_artifacts/ctgan_1690322716531/work
-cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
-debugpy @ file:///C:/b/abs_c0y1fjipt2/croot/debugpy_1690906864587/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-dython==0.7.3
-et-xmlfile==1.1.0
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1692026125334/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1667317341051/work
-Faker @ file:///home/conda/feedstock_root/build_artifacts/faker_1695328815086/work
-fastjsonschema==2.18.1
-filelock @ file:///home/conda/feedstock_root/build_artifacts/filelock_1694629184119/work
-fonttools==4.25.0
-gitdb==4.0.11
-GitPython==3.1.41
-graphviz==0.20.1
-idna==3.6
-importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1688754491823/work
-ipykernel @ file:///D:/bld/ipykernel_1693880431923/work
-ipython @ file:///D:/bld/ipython_1696264181145/work
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1654302431367/work
-joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1691577114857/work
-jsonschema==4.19.1
-jsonschema-specifications==2023.7.1
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1697036793436/work
-jupyter_core @ file:///D:/bld/jupyter_core_1696972371172/work
-kiwisolver @ file:///C:/ci_311/kiwisolver_1676431979301/work
-markdown-it-py==3.0.0
-MarkupSafe @ file:///C:/ci_311/markupsafe_1676424152318/work
-matplotlib @ file:///C:/b/abs_085jhivdha/croot/matplotlib-suite_1693812524572/work
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1660814786464/work
-mdurl==0.1.2
-mkl-fft @ file:///C:/b/abs_19i1y8ykas/croot/mkl_fft_1695058226480/work
-mkl-random @ file:///C:/b/abs_edwkj1_o69/croot/mkl_random_1695059866750/work
-mkl-service==2.4.0
-mpmath @ file:///home/conda/feedstock_root/build_artifacts/mpmath_1678228039184/work
-munkres==1.1.4
-nbformat==5.9.2
-nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1697083700168/work
-networkx @ file:///home/conda/feedstock_root/build_artifacts/networkx_1680692919326/work
-nltk @ file:///C:/b/abs_a638z6l1z0/croot/nltk_1688114186909/work
-numexpr @ file:///C:/b/abs_afm0oewmmt/croot/numexpr_1683221839116/work
-numpy @ file:///C:/b/abs_9fu2cs2527/croot/numpy_and_numpy_base_1695830496596/work/dist/numpy-1.26.0-cp311-cp311-win_amd64.whl#sha256=ebb3a554edce1131a5b1b0d4afa8f980929b1226bebc4eb515ac2e29b44186d2
-openpyxl==3.0.10
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1696202382185/work
-pandas @ file:///C:/miniconda3/conda-bld/pandas_1692298018988/work
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1638334955874/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-Pillow @ file:///C:/b/abs_20ztcm8lgk/croot/pillow_1696580089746/work
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1696272223550/work
-plotly==5.17.0
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1688565951714/work
-protobuf==4.25.2
-psutil @ file:///C:/ci_311_rebuilds/psutil_1679005906571/work
-pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
-pyarrow==14.0.2
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1636257122734/work
-pydeck==0.8.1b0
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1691408637400/work
-pyparsing @ file:///C:/ci_311/pyparsing_1678502182533/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-pytz @ file:///C:/b/abs_19q3ljkez4/croot/pytz_1695131651401/work
-pywin32==305.1
-pyzmq @ file:///C:/b/abs_655zk4a3s8/croot/pyzmq_1686601465034/work
-rdt @ file:///home/conda/feedstock_root/build_artifacts/rdt_1692741577955/work
-referencing==0.30.2
-regex @ file:///C:/b/abs_d5e2e5uqmr/croot/regex_1696515472506/work
-requests==2.31.0
-rich==13.7.0
-rpds-py==0.10.6
-scikit-learn @ file:///C:/b/abs_38k7ridbgr/croot/scikit-learn_1684954723009/work
-scikit-plot==0.3.7
-scipy==1.11.1
-seaborn @ file:///C:/ci_311/seaborn_1676446547861/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-smmap==5.0.1
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
-streamlit==1.30.0
-sympy @ file:///home/conda/feedstock_root/build_artifacts/sympy_1684180539862/work
-table-evaluator==1.6.1
-tenacity==8.2.3
-threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1689261241048/work
-toml==0.10.2
-toolz==0.12.0
-torch @ file:///C:/b/abs_abjetg6_iu/croot/pytorch_1686932924616/work
-tornado @ file:///C:/b/abs_0cbrstidzg/croot/tornado_1696937003724/work
-tqdm @ file:///C:/b/abs_f76j9hg7pv/croot/tqdm_1679561871187/work
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1696377679271/work
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1695040754690/work
-tzdata @ file:///croot/python-tzdata_1690578112552/work
-tzlocal==5.2
-urllib3==2.1.0
-validators==0.22.0
-watchdog==3.0.0
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1696255154857/work
-xgboost==2.0.0
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: win-64
+altair=5.2.0=pypi_0
+attrs=23.2.0=pypi_0
+blinker=1.7.0=pypi_0
+bzip2=1.0.8=he774522_0
+ca-certificates=2023.12.12=haa95532_0
+cachetools=5.3.2=pypi_0
+certifi=2023.11.17=pypi_0
+charset-normalizer=3.3.2=pypi_0
+click=8.1.7=pypi_0
+colorama=0.4.6=pypi_0
+contourpy=1.2.0=pypi_0
+cycler=0.12.1=pypi_0
+expat=2.5.0=hd77b12b_0
+fonttools=4.47.2=pypi_0
+gitdb=4.0.11=pypi_0
+gitpython=3.1.41=pypi_0
+idna=3.6=pypi_0
+importlib-metadata=7.0.1=pypi_0
+jinja2=3.1.3=pypi_0
+joblib=1.3.2=pypi_0
+jsonschema=4.20.0=pypi_0
+jsonschema-specifications=2023.12.1=pypi_0
+kiwisolver=1.4.5=pypi_0
+libffi=3.4.4=hd77b12b_0
+markdown-it-py=3.0.0=pypi_0
+markupsafe=2.1.3=pypi_0
+matplotlib=3.8.2=pypi_0
+mdurl=0.1.2=pypi_0
+numpy=1.26.3=pypi_0
+openssl=3.0.12=h2bbff1b_0
+packaging=23.2=pypi_0
+pandas=2.1.4=pypi_0
+pillow=10.2.0=pypi_0
+pip=23.3.1=py312haa95532_0
+protobuf=4.25.2=pypi_0
+pyarrow=14.0.2=pypi_0
+pydeck=0.8.1b0=pypi_0
+pygments=2.17.2=pypi_0
+pyparsing=3.1.1=pypi_0
+python=3.12.0=h1d929f7_0
+python-dateutil=2.8.2=pypi_0
+pytz=2023.3.post1=pypi_0
+referencing=0.32.1=pypi_0
+requests=2.31.0=pypi_0
+rich=13.7.0=pypi_0
+rpds-py=0.17.1=pypi_0
+scikit-learn=1.3.2=pypi_0
+scipy=1.11.4=pypi_0
+setuptools=68.2.2=py312haa95532_0
+six=1.16.0=pypi_0
+smmap=5.0.1=pypi_0
+sqlite=3.41.2=h2bbff1b_0
+streamlit=1.30.0=pypi_0
+tenacity=8.2.3=pypi_0
+threadpoolctl=3.2.0=pypi_0
+tk=8.6.12=h2bbff1b_0
+toml=0.10.2=pypi_0
+toolz=0.12.0=pypi_0
+tornado=6.4=pypi_0
+typing-extensions=4.9.0=pypi_0
+tzdata=2023.4=pypi_0
+tzlocal=5.2=pypi_0
+urllib3=2.1.0=pypi_0
+validators=0.22.0=pypi_0
+vc=14.2=h21ff451_1
+vs2015_runtime=14.27.29016=h5e58377_2
+watchdog=3.0.0=pypi_0
+wheel=0.41.2=py312haa95532_0
+xz=5.4.5=h8cc25b3_0
+zipp=3.17.0=pypi_0
+zlib=1.2.13=h8cc25b3_0
