--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,7 @@ openssl=3.0.12=h2bbff1b_0
 packaging=23.2=pypi_0
 pandas=2.1.4=pypi_0
 pillow=10.2.0=pypi_0
-pip=23.3.1=py312haa95532_0
+pip=23.3.2=pypi_0
 protobuf=4.25.2=pypi_0
 pyarrow=14.0.2=pypi_0
 pydeck=0.8.1b0=pypi_0
