--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,58 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-altair=5.2.0=pypi_0
-attrs=23.2.0=pypi_0
-blinker=1.7.0=pypi_0
-bzip2=1.0.8=he774522_0
-ca-certificates=2023.12.12=haa95532_0
-cachetools=5.3.2=pypi_0
-certifi=2023.11.17=pypi_0
-charset-normalizer=3.3.2=pypi_0
-click=8.1.7=pypi_0
-colorama=0.4.6=pypi_0
-contourpy=1.2.0=pypi_0
-cycler=0.12.1=pypi_0
-expat=2.5.0=hd77b12b_0
-fonttools=4.47.2=pypi_0
-gitdb=4.0.11=pypi_0
-gitpython=3.1.41=pypi_0
-idna=3.6=pypi_0
-importlib-metadata=7.0.1=pypi_0
-jinja2=3.1.3=pypi_0
-joblib=1.3.2=pypi_0
-jsonschema=4.20.0=pypi_0
-jsonschema-specifications=2023.12.1=pypi_0
-kiwisolver=1.4.5=pypi_0
-libffi=3.4.4=hd77b12b_0
-markdown-it-py=3.0.0=pypi_0
-markupsafe=2.1.3=pypi_0
-matplotlib=3.8.2=pypi_0
-mdurl=0.1.2=pypi_0
-numpy=1.26.3=pypi_0
-openssl=3.0.12=h2bbff1b_0
-packaging=23.2=pypi_0
-pandas=2.1.4=pypi_0
-pillow=10.2.0=pypi_0
-pip=23.3.2=pypi_0
-protobuf=4.25.2=pypi_0
-pyarrow=14.0.2=pypi_0
-pydeck=0.8.1b0=pypi_0
-pygments=2.17.2=pypi_0
-pyparsing=3.1.1=pypi_0
-python=3.12.0=h1d929f7_0
-python-dateutil=2.8.2=pypi_0
-pytz=2023.3.post1=pypi_0
-referencing=0.32.1=pypi_0
-requests=2.31.0=pypi_0
-rich=13.7.0=pypi_0
-rpds-py=0.17.1=pypi_0
-scikit-learn=1.3.2=pypi_0
-scipy=1.11.4=pypi_0
-setuptools=68.2.2=py312haa95532_0
-six=1.16.0=pypi_0
-smmap=5.0.1=pypi_0
-sqlite=3.41.2=h2bbff1b_0
-streamlit=1.30.0=pypi_0
-tenacity=8.2.3=pypi_0
-threadpoolctl=3.2.0=pypi_0
-tk=8.6.12=h2bbff1b_0
-toml=0.10.2=pypi_0
-toolz=0.12.0=pypi_0
-tornado=6.4=pypi_0
-typing-extensions=4.9.0=pypi_0
-tzdata=2023.4=pypi_0
-tzlocal=5.2=pypi_0
-urllib3=2.1.0=pypi_0
-validators=0.22.0=pypi_0
-vc=14.2=h21ff451_1
-vs2015_runtime=14.27.29016=h5e58377_2
-watchdog=3.0.0=pypi_0
-wheel=0.41.2=py312haa95532_0
-xz=5.4.5=h8cc25b3_0
-zipp=3.17.0=pypi_0
-zlib=1.2.13=h8cc25b3_0
+altair==5.2.0
+attrs==23.2.0
+blinker==1.7.0
+cachetools==5.3.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+contourpy==1.2.0
+cycler==0.12.1
+fonttools==4.47.2
+gitdb==4.0.11
+GitPython==3.1.41
+idna==3.6
+importlib-metadata==7.0.1
+Jinja2==3.1.3
+joblib==1.3.2
+jsonschema==4.20.0
+jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.8.2
+mdurl==0.1.2
+numpy==1.26.3
+packaging==23.2
+pandas==2.1.4
+pillow==10.2.0
+protobuf==4.25.2
+pyarrow==14.0.2
+pydeck==0.8.1b0
+Pygments==2.17.2
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+referencing==0.32.1
+requests==2.31.0
+rich==13.7.0
+rpds-py==0.17.1
+scikit-learn==1.3.2
+scipy==1.11.4
+setuptools==68.2.2
+six==1.16.0
+smmap==5.0.1
+streamlit==1.30.0
+tenacity==8.2.3
+threadpoolctl==3.2.0
+toml==0.10.2
+toolz==0.12.0
+tornado==6.4
+typing_extensions==4.9.0
+tzdata==2023.4
+tzlocal==5.2
+urllib3==2.1.0
+validators==0.22.0
+watchdog==3.0.0
+wheel==0.41.2
+zipp==3.17.0
